<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_base">

    <include layout="@layout/view_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/gutter">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_general"
                android:textAppearance="@style/TextAppearance.Falcon.SectionHeader"/>

            <include
                android:id="@+id/settings_ocr_language"
                layout="@layout/item_option_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <include
                android:id="@+id/settings_image_quality"
                layout="@layout/item_option_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <include
                android:id="@+id/settings_auto_translate"
                layout="@layout/item_option_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gutter"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_translation"
                android:textAppearance="@style/TextAppearance.Falcon.SectionHeader"/>

            <include
                android:id="@+id/settings_default_source"
                layout="@layout/item_option_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <include
                android:id="@+id/settings_default_target"
                layout="@layout/item_option_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gutter"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_other"
                android:textAppearance="@style/TextAppearance.Falcon.SectionHeader"/>

            <include
                android:id="@+id/settings_models"
                layout="@layout/item_option_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <include
                android:id="@+id/settings_about"
                layout="@layout/item_option_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <include
                android:id="@+id/settings_help"
                layout="@layout/item_option_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
